[project]
name = "desslyhub-api"
version = "0.1.0"
description = "Асинхронный клиент для DesslyHub API (Steam, мобильные игры, ваучеры, eSIM, заказы, баланс, курсы валют)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Lordov" }]
keywords = ["desslyhub", "api", "async", "aiohttp", "steam", "vouchers", "esim", "orders"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]
dependencies = [
    "aiohttp>=3.10",
    "orjson>=3.10",
    "pydantic>=2.7",
]

[project.urls]
Homepage = "https://github.com/lordov/desslyhub"
Repository = "https://github.com/lordov/desslyhub"
Documentation = "https://desslyhub.com/readme/"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "aioresponses>=0.7.6",
    "black>=24.0",
    "isort>=5.13",
    "mypy>=1.11",
]

[tool.uv]
# aioresponses пока несовместим с aiohttp >= 3.14, поэтому ограничиваем версию
# только в окружении разработки. Публичное требование (aiohttp>=3.10) не меняется.
constraint-dependencies = ["aiohttp<3.14"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["desslyhub_api"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
